--- a/experiments/seven_segment/application/.cargo/config.toml
+++ b/experiments/seven_segment/application/.cargo/config.toml
@@ -27,8 +27,8 @@ rustflags = [
 ]
 
 # Flash and run via a debug probe (over SWD).
-# runner = "probe-rs run --chip RP2040"
+runner = "probe-rs run --chip RP2040"
 
 # Alternative runner: make a UF2 file and copy it to a mounted RP2040
 # in USB bootloader mode:
-runner = "elf2uf2-rs -d"
+# runner = "elf2uf2-rs -d"
